7.1.0
 - Query tuples straight into `std::tuple` using `transaction::stream()`!
 - And, `stream_from` now supports more or less arbitrary queries.
 - Streaming data is now more efficient.
 - The table name in `stream_from` is now escaped.
 - You can now "convert" strings to `std::string_view`.  Mind your lifetimes!
 - If a `stream_from` row fails to convert, you can no longer retry it.
 - `from_string(field const &)` now handles null values properly.
 - Obsolete Windows build docs are gone.
 - Added `row::to(std::tuple<...>)`.
 - Unified the test suites.  We no longer need `test/unit/unit_runner`.
7.0.6
 - Prefer `pg_config` over `pkg-config` for include path (#291).
 - Try to plod on if we don't know the PostgreSQL include path.
7.0.5
 - Compile fix for g++ 10: include `<limits>` (#292).
 - Cleaned up error-checking of PG results.  (#280).
 - The `esc()` methods now also take `std::string_view` (#295).
7.0.4
 - Fix possible crash in `connection::connection_string` (#290).
 - Fix filtering of default values in `connection::connection_string` (#288).
 - Deprecate `row::swap` and public inheritance of iterators from `row`.
 - More copy/move/default constructors/assignments on result iterators.
 - More copy/move/default constructors/assignments on row iterators.
7.0.3
 - Fixed misreporting of broken connection as `sql_error` (#280).
 - Replaced non-ASCII test texts with escape codes (#282, #283).
 - `ilostream` could truncate at `0xff` byte at buffer boundary (#284, #286).
7.0.2
 - New query function: `query_value`, queries and converts a single value.
 - A `stream_from` stream can now be iterated.
 - More callable types qualify as transactors, thanks to `std::invoke`.
7.0.1
 - Windows build fixes.
 - Documentation for writing your own string conversions.
 - `transaction_rollback` and children are now `sql_error`, not just `failure`.
7.0.0
 - Bumped minimum required C++ version to C++17.
 - Everything has changed.  If you're porting from older versions, be careful!